cluster/platform/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: console.minio.home.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-frontend-loadbalancer
                port:
                  number: 9001
